# e-backend

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: database.py  dependencies.py  env_loader.py  limiter.py  main.py
app/auth/: auth.py  utilits.py
app/models/: __init__.py  categories.py  courses.py  models.py  users.py
app/routers/: catagory.py  category.py  course.py  users.py
app/schemas/: catagory.py  course.py  user.py
tests/: conftest.py  test_auth.py  test_categories.py  test_courses.py  test_permissions.py  test_users.py
