[project]
name = "e-learning"
version = "0.1.0"
description = "Bhutan E-Learning Platform Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "asyncpg>=0.31.0",
    "pyjwt",
    "argon2-cffi",
    "pydantic-settings",
    "python-dotenv",
    "slowapi>=0.1.9",
    "pwdlib>=0.3.0",
    "sqlalchemy>=2.0.46",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "aiosqlite>=0.22.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
prod = [
    "gunicorn",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
lint.extend-select = ["FAST", "ASYNC", "T20", "AIR", "I", "Q"]
